# traccc-tutorial

./: CMakeLists.txt  LICENSE  README.md
geometry/: telescope_detector_geometry.json  telescope_detector_homogeneous_material.json
tutorials/: clusterization.cpp  cuda_track_fitting.cpp  seeding.cpp  track_finding.cpp  track_fitting.cpp  track_fitting_cuda.cpp  track_parameter_estimation.cpp  track_params_estimation.cpp  write_detector.cpp
